--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ distro==1.9.0
 environs==11.0.0
 fastapi==0.112.0
 fastapi_cors==0.0.6
+git-filter-repo==2.45.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
