--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 distro==1.9.0
 environs==11.0.0
+exa-py==1.0.18
 fastapi==0.112.0
 fastapi_cors==0.0.6
 git-filter-repo==2.45.0
